= Changelog: Datetime
:author: Philip Michael Raab
:email: <peep@inane.co.za>
:revnumber: 0.3.0
:revdate: 2022-09-22
:revremark: dev
:experimental:
:icons: font
:source-highlighter: highlight.js
:toc: auto

 version: $Id: 0.1.0$ ($Date: Sun Aug 14 01:02:03 2022 +0200$)

== History

=== current: 0.3.0 (2022 Xxx xx)

* next

=== 0.2.0 (2022 Sep 22)

* new: `TimeWrapper` interface for time unit classes
* new: `Timestamp` wrapper around timestamps
* new: `abs` absolute value function added to both classes
* update: `Timespan`: get durations with specified units only
* update: `Timespan`: add month unit
* update: `Timespan`: *symbolType* renamed to *symbolFormat*
* update: `Timespan`: moved moment functions to timestamp
* update: `Timespan`: handles historic/negative values
* update: `Timespan`: format now returns duration

=== 0.1.0 (2022 Aug 13)

* initial